k8s.yaml
apiVersion: v1
kind: Service
metadata:
  name: woodgrovebank-admin
spec:
  selector:
    app: woodgrovebank-admin
  ports:
  - name: frontend
    port: 80
    targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: woodgrovebank-api
spec:
  selector:
    app: woodgrovebank-api
  ports:
  - name: api
    port: 80
    targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: woodgrovebank-admin
spec:
  selector:
    matchLabels:
      app: woodgrovebank-admin
  template:
    metadata:
      labels:
        app: woodgrovebank-admin
    spec:
      containers:
      - name: woodgrovebank-admin
        image: woodgrovebank-admin:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 80
        - containerPort: 30000
        - containerPort: 11111
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: woodgrovebank-api
spec:
  selector:
    matchLabels:
      app: woodgrovebank-api
  template:
    metadata:
      labels:
        app: woodgrovebank-api
    spec:
      containers:
      - name: woodgrovebank-api
        image: woodgrovebank-api:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 80
        - containerPort: 30001
        - containerPort: 11112
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: woodgrovebank-admin
            port:
              number: 80
